# homedoc-spektor

./: .gitignore  CHANGELOG.md  Makefile  README.md  USAGE.md  pyproject.toml  spektor-cli.py  spektor_gui.py
spektor/: __init__.py  interactive.py  llm.py  reporting.py  schema.py  sysprobe.py  util.py  version.py
tests/: test_parsers.py
tests/data/: lscpu.json  meminfo  os-release
