[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "homedoc-spektor"
version = "0.1.0"
description = "Collect Linux system inventories and summarise them with local LLMs"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-or-later"}
authors = [
  {name = "HomeDoc Contributors"}
]
classifiers = [
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
]
dependencies = []

[project.scripts]
spektor = "spektor-cli:main"

[tool.setuptools]
packages = ["spektor"]
include-package-data = false
